package fr.fges.models;

public record RemoveGameCommand (
        String title
) {}